k8s/production/airflow/templates/webserver/webserver-deployment.yaml
---
# Source: airflow/templates/webserver/webserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-web
  labels:
    app: airflow
    component: web
    chart: airflow-8.7.1
    release: airflow
    heritage: Helm
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      ## multiple web pods can safely run concurrently
      maxSurge: 25%
      maxUnavailable: 0
  selector:
    matchLabels:
      app: airflow
      component: web
      release: airflow
  template:
    metadata:
      annotations:
        checksum/secret-config-envs: 417fb1258803452f520a433ffcbcc81cc94c440daca553a1bb2be210ea784716
        checksum/secret-local-settings: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
        checksum/config-webserver-config: 9738da91e0615e22362250a9f8410a2bba41f3dc2f6f3dc39b508bd194a1fb72
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
      labels:
        app: airflow
        component: web
        release: airflow
    spec:
      restartPolicy: Always
      nodeSelector:
        {}
      affinity:
        {}
      tolerations:
        []
      serviceAccountName: airflow
      securityContext:
        fsGroup: 0
      containers:
        - name: airflow-web          
          image: viniciusdsmello/airflow-k8s:v1.0.0
          imagePullPolicy: Always
          securityContext:
            runAsUser: 50000
            runAsGroup: 0
          resources:
            limits:
              cpu: 1500m
              memory: 3Gi
            requests:
              cpu: 500m
              memory: 1Gi
          ports:
            - name: web
              containerPort: 8080
              protocol: TCP
          command:            
            - "/usr/bin/dumb-init"
            - "--"
            - "/entrypoint"
          args:
            - "bash"
            - "-c"
            - "exec airflow webserver"
          livenessProbe:
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
            httpGet:
              scheme: HTTP
              path: /health
              port: web
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
            httpGet:
              scheme: HTTP
              path: /health
              port: web
          volumeMounts:            
            - name: dags-data
              mountPath: /opt/airflow/dags
            - name: logs-data
              mountPath: /opt/airflow/logs
              subPath: 
            - name: webserver-config
              mountPath: /opt/airflow/webserver_config.py
              subPath: webserver_config.py
              readOnly: true        
        - name: dags-git-sync
          image: registry.k8s.io/git-sync/git-sync:v3.6.5
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 65533
            runAsGroup: 65533
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - name: dags-data
              mountPath: /dags
            - name: git-secret
              mountPath: /etc/git-secret/id_rsa
              readOnly: true
              subPath: id_rsa
      volumes:        
        - name: dags-data
          emptyDir: {}
        - name: logs-data
          persistentVolumeClaim:
            claimName: airflow-logs
        - name: git-secret
          secret:
            secretName: airflow-gitsync
            defaultMode: 0644
        - name: webserver-config
          secret:
            secretName: airflow-webserver-config
            defaultMode: 0644
