k8s/production/airflow/templates/webserver/webserver-ingress.yaml
---
# Source: airflow/templates/webserver/webserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-web
  labels:
    app: airflow
    component: web
    chart: airflow-8.7.1
    release: airflow
    heritage: Helm
spec:
  ingressClassName: nginx
  rules:
    - host: your-domain.com
      http:
        paths:
          - path: 
            pathType: ImplementationSpecific
            backend:
              service:
                name: airflow-web
                port:
                  name: web
